@@ -31,3 +31,7 @@ Dec 23 1998	Modified logic in esp calculation
 		Removed replicated density and potential arrays
 		Added Schwarz screening
 		Added option to read in previous esp grid
+
+Dec 28 1998	Use 24 as lfn for lfngrd
+		Precalculate grid size before memory allocation
+		Remove unnecessary ga_get in esp_denmat.F
